--- a/src/app/avaliation/antropometria/deuremberg/deuremberg.component.html
+++ b/src/app/avaliation/antropometria/deuremberg/deuremberg.component.html
@@ -8,8 +8,16 @@
              <thead>
                  <tr>
                      <th>&nbsp;</th>
-                     <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
-                     <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
+                     <th class="th-top" *ngIf="pointer>=1">
+                        <button type="button" (click)="setEvaluation(evaluation[pointer-1])">
+                            {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                        </button>
+                    </th>
+                    <th class="th-top" *ngIf="pointer>=0">
+                        <button type="button" (click)="setEvaluation(evaluation[pointer])">
+                            {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                        </button>
+                    </th>
                      <th class="th-top" *ngIf="addEval">
                          <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                              style="width: 110px;">
@@ -17,24 +25,6 @@
                  </tr>
              </thead>
              <tbody>
-                 <tr>
-                     <th><span>IMC</span></th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].imc}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].imc}}</td>
-                     <td *ngIf="addEval">
-                         <input name="imc" #imc="ngModel" [(ngModel)]="newEvaluation.imc"
-                              type="number" step="0.1">
-                     </td>
-                 </tr>
-                 <tr>
-                     <th>Idade</th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].idade}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].idade}}</td>
-                     <td *ngIf="addEval">
-                         <input name="idade" #idade="ngModel" [(ngModel)]="newEvaluation.idade"
-                             type="number" step="0.1">
-                     </td>
-                 </tr>
                 <tr>
                     <th>Abdominal</th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdomen}}</td>
@@ -44,6 +34,19 @@
                             type="number" step="0.1">
                     </td>
                 </tr>
+                 <tr>
+                     <th><span>IMC</span></th>
+                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].imc}}</td>
+                     <td *ngIf="pointer>=0">{{evaluation[pointer].imc}}</td>
+                     <td *ngIf="addEval">&nbsp;</td>
+                 </tr>
+                 <tr>
+                     <th>Idade</th>
+                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].idade}}</td>
+                     <td *ngIf="pointer>=0">{{evaluation[pointer].idade}}</td>
+                     <td *ngIf="addEval">&nbsp; </td>
+                 </tr>
+
 
                 </tbody>
          </table>
@@ -68,6 +71,28 @@
              </button>
          </div>
      </form>
+     <br />
+     <hr />
+     <h4 style="text-align: center; color: blue;">
+         {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
+     </h4>
+     <div *ngIf="showChart">
+     <div style="text-align: center; color: blue;">
+         <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small> :  </mat-label>
+         <mat-slider min="10" max="30" step="1" thumbLabel="true"  [(ngModel)]="gorduraDesejada" [disabled]="!fatChanged"
+             (change)="getNewEvaluation()">
+         </mat-slider>
+         <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+             <mat-icon>edit</mat-icon>
+         </button>
+         <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+             <mat-icon>save</mat-icon>
+         </button>
+     </div>
+     
+         <app-chart-pie [values]="single"></app-chart-pie>
+         <app-chart-pie [values]="single2"></app-chart-pie>
+     </div>
  
  </div>
  
