--- a/src/app/avaliation/componente-morfologica/im/im.component.html
+++ b/src/app/avaliation/componente-morfologica/im/im.component.html
@@ -4,17 +4,13 @@
     </div>
 
     <div class="section">
-                <form #f="ngForm" (submit)="save(f.value)">
+                <form #f="ngForm" >
                     <table>
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
                                 <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].dt_avaliacao | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].dt_avaliacao | date:'dd-LL-yyyy'}}</th>
-                                <th class="th-top" *ngIf="addEval">
-                                    <input name="dt_avaliacao" #dt_avaliacao="ngModel" [(ngModel)]="newEvaluation.dt_avaliacao" type="date"
-                                        style="width: 110px;"> 
-                                </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -22,48 +18,34 @@
                                 <th i18n>Altura <small>(m)</small></th>
                                 <td *ngIf="pointer>=1">{{evaluation[pointer-1].altura}}</td>
                                 <td *ngIf="pointer>=0">{{evaluation[pointer].altura}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura"
-                                         type="number" step="0.1" placeholder="metros">
-                                </td>
                             </tr>
                             <tr>
                                 <th i18n>Peso <small>(Kg)</small></th>
                                 <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso}}</td>
                                 <td *ngIf="pointer>=0">{{evaluation[pointer].peso}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso"
-                                        type="number" step="0.1" placeholder="kilos">
-                                </td>
                             </tr>
                             <tr>
                                 <th i18n>IMC</th>
                                 <td *ngIf="pointer>=1">{{evaluation[pointer-1].imc}}</td>
                                 <td *ngIf="pointer>=0">{{evaluation[pointer].imc}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="imc" #imc="ngModel" [ngModel]="calcIMC(newEvaluation)" [value]="calcIMC(newEvaluation)"  readonly>
-                                </td>
                             </tr>
                             <tr>
                                 <th i18n>Classificação</th>
                                 <td *ngIf="pointer>=1">
-                                    <span *ngIf="evaluation[pointer-1].imc < 18.5">Peso abaixo do normal</span>
-                                    <span *ngIf="evaluation[pointer-1].imc >= 18.5 && evaluation[pointer-1].imc < 25">Normal</span>
-                                    <span *ngIf="evaluation[pointer-1].imc >= 25 && evaluation[pointer-1].imc < 30">Peso acima do normal</span>
-                                    <span *ngIf="evaluation[pointer-1].imc >= 30 && evaluation[pointer-1].imc < 35">Obesidade tipo I</span>
-                                    <span *ngIf="evaluation[pointer-1].imc >= 35 && evaluation[pointer-1].imc < 40">Obesidade tipo II</span>
-                                    <span *ngIf="evaluation[pointer-1].imc >= 40">Obsidade extrema</span>
+                                    <span *ngIf="evaluation[pointer-1].imc < 18.5"><img src="./assets/img/peso_blue.gif" width="30px" alt="peso"></span>
+                                    <span *ngIf="evaluation[pointer-1].imc >= 18.5 && evaluation[pointer-1].imc < 25"><img src="./assets/img/peso_green.gif" width="30px" alt="peso"></span>
+                                    <span *ngIf="evaluation[pointer-1].imc >= 25 && evaluation[pointer-1].imc < 30"><img src="./assets/img/peso_orange.gif" width="30px" alt="peso"></span>
+                                    <span *ngIf="evaluation[pointer-1].imc >= 30 && evaluation[pointer-1].imc < 35"><img src="./assets/img/peso_orange2.gif" width="30px" alt="peso"></span>
+                                    <span *ngIf="evaluation[pointer-1].imc >= 35 && evaluation[pointer-1].imc < 40"><img src="./assets/img/peso_red.gif" width="30px" alt="peso"></span>
+                                    <span *ngIf="evaluation[pointer-1].imc >= 40"><img src="./assets/img/peso_black.gif" width="30px" alt="peso"></span>
                                 </td>
                                 <td *ngIf="pointer>=0">
-                                        <span *ngIf="evaluation[pointer].imc < 18.5">Peso abaixo do normal</span>
-                                        <span *ngIf="evaluation[pointer].imc >= 18.5 && evaluation[pointer].imc < 25">Normal</span>
-                                        <span *ngIf="evaluation[pointer].imc >= 25 && evaluation[pointer].imc < 30">Peso acima do normal</span>
-                                        <span *ngIf="evaluation[pointer].imc >= 30 && evaluation[pointer].imc < 35">Obesidade tipo I</span>
-                                        <span *ngIf="evaluation[pointer].imc >= 35 && evaluation[pointer].imc < 40">Obesidade tipo II</span>
-                                        <span *ngIf="evaluation[pointer].imc >= 40">Obesidade extrema</span>
-                                </td>
-                                <td *ngIf="addEval">
-                                    <!-- <input name="classe" #classe="ngModel" [(ngModel)]="newEvaluation.classe" type="text"> -->
+                                        <span *ngIf="evaluation[pointer].imc < 18.5"><img src="./assets/img/peso_blue.gif" width="30px" alt="peso"></span>
+                                        <span *ngIf="evaluation[pointer].imc >= 18.5 && evaluation[pointer].imc < 25"><img src="./assets/img/peso_green.gif" width="30px" alt="peso"></span>
+                                        <span *ngIf="evaluation[pointer].imc >= 25 && evaluation[pointer].imc < 30"><img src="./assets/img/peso_orange.gif" width="30px" alt="peso"></span>
+                                        <span *ngIf="evaluation[pointer].imc >= 30 && evaluation[pointer].imc < 35"><img src="./assets/img/peso_orange2.gif" width="30px" alt="peso"></span>
+                                        <span *ngIf="evaluation[pointer].imc >= 35 && evaluation[pointer].imc < 40"><img src="./assets/img/peso_red.gif" width="30px" alt="peso"></span>
+                                        <span *ngIf="evaluation[pointer].imc >= 40"><img src="./assets/img/peso_black.gif" width="30px" alt="peso"></span>
                                 </td>
                             </tr>
                             <tr>
@@ -96,35 +78,21 @@
                                         <span *ngIf="evaluation[pointer].imc >= 27.2">Elevado</span>
                                     </div> 
                                 </td>
-                                <td *ngIf="addEval">
-                                    <!-- <input name="classe" #classe="ngModel" [(ngModel)]="newEvaluation.classe" type="text"> -->
-                                </td>
                             </tr>                            
                         </tbody>
                     </table>
 
                     <div class="action">
-                        <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                        <button type="button"  [disabled]="pointer<=1" mat-mini-fab color="default"
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
-                            <mat-icon class="mat-18">add</mat-icon>
-                        </button>
-                        <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
+                        <button type="button" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
                             color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
-                            <mat-icon class="mat-18">close</mat-icon>
-                        </button>
-                        <button *ngIf="addEval" mat-fab>
-                            <mat-icon class="mat-18">check</mat-icon>
-                        </button>
                     </div>
                 </form>
-
-
     </div>
 
     <div class="footer">
