--- a/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
+++ b/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
@@ -4,17 +4,12 @@
     </div>
 
     <div class="section">
-                <form #f="ngForm" (submit)="save(f.value)">
                     <table>
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].dt_avaliacao | date:'dd-LL-yyyy'}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].dt_avaliacao | date:'dd-LL-yyyy'}}</th>
-                                <th class="th-top" *ngIf="addEval">
-                                    <input name="dt_avaliacao" #dt_avaliacao="ngModel" [(ngModel)]="newEvaluation.dt_avaliacao" type="date"
-                                        style="width: 110px;">
-                                </th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -22,28 +17,16 @@
                                 <th i18n>Cintura <small>(cm)</small></th>
                                 <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdomen}}</td>
                                 <td *ngIf="pointer>=0">{{evaluation[pointer].abdomen}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
-                                         type="number" step="0.1" placeholder="centimetros">
-                                </td>
                             </tr>
                             <tr>
                                 <th i18n>Quadril <small>(cm)</small></th>
                                 <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadril}}</td>
                                 <td *ngIf="pointer>=0">{{evaluation[pointer].quadril}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="quadril" #quadril="ngModel" [(ngModel)]="newEvaluation.quadril"
-                                        type="number" step="0.1" placeholder="centimetros">
-                                </td>
                             </tr>
                             <tr>
                                 <th i18n>IRCQ</th>
-                                <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdomen / evaluation[pointer-1].quadril | number:'1.1'}}</td>
-                                <td *ngIf="pointer>=0">{{evaluation[pointer].abdomen / evaluation[pointer].quadril | number:'1.1'}}</td>
-                                <td *ngIf="addEval">
-<!--                                     <input name="ircq" #ircq="ngModel" [(ngModel)]="newEvaluation.ircq"
-                                        type="number" step="0.1"> -->
-                                </td>
+                                <td *ngIf="pointer>=1">{{+evaluation[pointer-1].abdomen / +evaluation[pointer-1].quadril | number:'1.2-2'}}</td>
+                                <td *ngIf="pointer>=0">{{+evaluation[pointer].abdomen / +evaluation[pointer].quadril | number:'1.2-2'}}</td>
                             </tr>
                             <tr>
                                 <th i18n>Classificação</th>
@@ -59,9 +42,6 @@
                                     <span *ngIf="getClasse(evaluation[pointer])==3">Alto</span>
                                     <span *ngIf="getClasse(evaluation[pointer])==4">Muito Alto</span>
                                 </td>
-                                <td *ngIf="addEval">
-                                    <!-- <input name="classe" #classe="ngModel" [(ngModel)]="newEvaluation.classe" type="text"> -->
-                                </td>
                             </tr>
                             
                         </tbody>
@@ -72,21 +52,11 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
-                            <mat-icon class="mat-18">add</mat-icon>
-                        </button>
                         <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
                             color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
-                            <mat-icon class="mat-18">close</mat-icon>
-                        </button>
-                        <button *ngIf="addEval" mat-fab>
-                            <mat-icon class="mat-18">check</mat-icon>
-                        </button>
                     </div>
-                </form>
 
 
     </div>
