--- a/src/app/avaliation/dobras/carter/carter.component.html
+++ b/src/app/avaliation/dobras/carter/carter.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Carter (1982)</h3>
+        <h3>Carter - 6 dobras (1982)</h3>
     </div> 
     <div class="section">
      <form #f="ngForm" (submit)="save(f.value)">
